Update self from self

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,14 @@
 # * -------------------------------------------------------------------------------- * #
 # * Changes below may be lost in significant template updates.
 
+# To allow for local variation in type checking without overriding CI
+pyrightconfig.json
 # To avoid committing profiler results
 *.prof
 # To avoid committing rejected changes upon bumping template
 *.rej
+# Don't commit first time setup script from copier-python-init
+/first_time_setup.ps1
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
 # Avoid committing local docs builds for previewing
