--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,15 @@
       "id": "templateOptions",
       "description": "Template options.",
       "type": "pickString",
-      "options": ["", "-Defaults", "-Recopy", "-Recopy -Defaults"]
+      "options": [
+        "",
+        "-Defaults",
+        "-Recopy",
+        "-Recopy -Defaults",
+        "-Defaults -NoVerify",
+        "-Recopy -NoVerify",
+        "-Recopy -Defaults -NoVerify"
+      ]
     }
   ],
   "tasks": [
@@ -138,6 +146,14 @@
       "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
       "command": "pytest --cov --cov-report xml",
       "icon": { "id": "type-hierarchy-sub" },
+      "problemMatcher": []
+    },
+    {
+      "label": "task: run core update",
+      "type": "shell",
+      "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
+      "command": "python .tools/scripts/core_update.py",
+      "icon": { "id": "graph" },
       "problemMatcher": []
     },
     {
