--- a/pytest.ini
+++ b/pytest.ini
@@ -5,7 +5,8 @@
 # * -------------------------------------------------------------------------------- * #
 # * Changes below may be lost in significant template updates.
 
-addopts = -p no:legacypaths -r a --dist loadgroup
+addopts = --verbose -p no:legacypaths -r a
 testpaths = tests
 markers = slow
-filterwarnings = error
+cache_dir = .cache/.pytest_cache
+xfail_strict = True
