--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/typings"]
 	path = submodules/typings
 	url = https://github.com/blakeNaccarato/pylance-stubs-unofficial.git
+[submodule "submodules/template"]
+	path = submodules/template
+	url = https://github.com/blakeNaccarato/copier-python.git
