--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "template"]
+[submodule "submodules/template"]
 	path = submodules/template
 	url = https://github.com/blakeNaccarato/copier-python.git
-[submodule "typings"]
+[submodule "submodules/typings"]
 	path = submodules/typings
 	url = https://github.com/blakeNaccarato/pylance-stubs-unofficial.git
