--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -155,7 +155,9 @@
   "search.exclude": {
     "**/node_modules": true,
     "**/bower_components": true,
-    "**/*.code-search": true
+    "**/*.code-search": true,
+    "typings": true,
+    "template": true
   },
 
   //! Line-width
