--- a/renovate.json
+++ b/renovate.json
@@ -4,7 +4,15 @@
   "extends": ["config:base", ":enablePreCommit", ":disableRateLimiting"],
   "dependencyDashboardApproval": false,
   "schedule": ["on the first day of the month"],
-  "enabledManagers": ["github-actions", "pip_requirements", "pre-commit"],
+  "git-submodules": {
+    "enabled": true
+  },
+  "enabledManagers": [
+    "git-submodules",
+    "github-actions",
+    "pip_requirements",
+    "pre-commit"
+  ],
   "pip_requirements": {
     "description": "Additionally monitor these files",
     "fileMatch": ["^\\.tools/requirements/*"]
@@ -23,6 +31,11 @@
       "groupName": "core",
       "matchPackagePatterns": ["*"],
       "matchUpdateTypes": ["minor", "patch"]
+    },
+    {
+      "description": "Avoid cyclic dependency on self.",
+      "matchManagers": ["git-submodules"],
+      "ignoreDeps": ["submodules/template"]
     },
     {
       "description": "Pre-commit manages black and ruff. Projects manage pyright.",
