--- a/renovate.json
+++ b/renovate.json
@@ -38,7 +38,12 @@
       "ignoreDeps": ["submodules/template"]
     },
     {
-      "description": "Pre-commit manages black and ruff. Projects manage pyright.",
+      "description": "Don't update copier until it is fully isolated from main venv",
+      "matchManagers": ["git-submodules"],
+      "ignoreDeps": ["submodules/template"]
+    },
+    {
+      "description": "Pre-commit manages black and ruff, projects manage pyright",
       "matchManagers": ["pip_requirements"],
       "matchPaths": ["template/.tools/requirements/*"],
       "ignoreDeps": ["black", "ruff", "pyright"]
