--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "submodules/template"]
+[submodule "template"]
 	path = submodules/template
 	url = https://github.com/blakeNaccarato/copier-python.git
-[submodule "submodules/typings"]
+[submodule "typings"]
 	path = submodules/typings
 	url = https://github.com/blakeNaccarato/pylance-stubs-unofficial.git
