--- a/.tools/requirements/requirements_core.txt
+++ b/.tools/requirements/requirements_core.txt
@@ -6,8 +6,8 @@
 # * -------------------------------------------------------------------------------- * #
 # * Changes below may be lost in significant template updates.
 
-copier<8.3
-dulwich
-flit_core
-pip
-wheel
+copier==8.1.0
+dulwich==0.21.5
+flit_core==3.9.0
+pip==23.2.1
+wheel==0.41.1
