--- a/.tools/requirements/requirements_docs.txt
+++ b/.tools/requirements/requirements_docs.txt
@@ -6,7 +6,7 @@
 # * -------------------------------------------------------------------------------- * #
 # * Changes below may be lost in significant template updates.
 
-myst-parser
-sphinx-autobuild
-sphinx-book-theme
-sphinx-design
+myst-parser==2.0.0
+sphinx-autobuild==2021.03.14
+sphinx-book-theme==1.0.1
+sphinx-design==0.5.0
