--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
   ],
   "pip_requirements": {
     "description": "Additionally monitor these files",
-    "fileMatch": ["(^|/)template/\\.tools/requirements/.*$"]
+    "fileMatch": ["^template/\\.tools/requirements/*"]
   },
   "github-actions": {
     "description": "Additionally monitor template GitHub actions.",
