--- a/renovate.json
+++ b/renovate.json
@@ -15,15 +15,15 @@
   ],
   "pip_requirements": {
     "description": "Additionally monitor these files",
-    "fileMatch": ["^template/\\.tools/requirements/*"]
+    "fileMatch": ["^template/\\.tools/requirements/.*$"]
   },
   "github-actions": {
     "description": "Additionally monitor template GitHub actions.",
-    "fileMatch": ["(^|/)template/\\.github/workflows/.*$"]
+    "fileMatch": ["^template/\\.github/workflows/.*$"]
   },
   "pre-commit": {
     "description": "Additionally monitor pre-commit config.",
-    "fileMatch": ["(^|/)template/\\.pre-commit-config\\.yaml$"]
+    "fileMatch": ["^template/\\.pre-commit-config\\.yaml$"]
   },
   "packageRules": [
     {
@@ -45,7 +45,7 @@
     {
       "description": "Pre-commit manages black and ruff, projects manage pyright",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": ["template/.tools/requirements/*"],
+      "matchFileNames": ["template/.tools/requirements/*"],
       "ignoreDeps": ["black", "ruff", "pyright"]
     },
     {
@@ -57,19 +57,19 @@
     {
       "description": "Ignore changerelease.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": ["dropseed/changerelease"]
     },
     {
       "description": "Ignore codeql.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": ["actions/checkout", "github/codeql-action"]
     },
     {
       "description": "Ignore main.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": [
         "blakeNaccarato/copier-python-workflow-setup",
         "codecov/codecov-action",
@@ -79,13 +79,13 @@
     {
       "description": "Ignore publish.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": ["actions/upload-pages-artifact", "actions/deploy-pages"]
     },
     {
       "description": "Ignore sphinx.yml workflow deps managed by the template",
       "matchManagers": ["github-actions"],
-      "matchFilenames": [".github/workflows/*"],
+      "matchFileNames": [".github/workflows/*"],
       "ignoreDeps": [
         "dropseed/changerelease",
         "actions/checkout",
@@ -100,7 +100,7 @@
     {
       "description": "Ignore pre-commit dependencies managed by the template",
       "matchManagers": ["pre-commit"],
-      "matchFilenames": [".pre-commit-config.yaml"],
+      "matchFileNames": [".pre-commit-config.yaml"],
       "ignoreDeps": [
         "pre-commit/pre-commit-hooks",
         "psf/black",
@@ -114,7 +114,7 @@
     {
       "description": "Ignore requirements_both.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": [
         "ruff",
         "pytest",
@@ -127,13 +127,13 @@
     {
       "description": "Ignore requirements_core.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": ["copier", "dulwich", "flit_core", "pip", "wheel"]
     },
     {
       "description": "Ignore requirements_dev.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": [
         "fawltydeps",
         "ipykernel",
@@ -149,7 +149,7 @@
     {
       "description": "Ignore requirements_docs.txt deps managed by this template",
       "matchManagers": ["pip_requirements"],
-      "matchFilenames": [".tools/requirements/*"],
+      "matchFileNames": [".tools/requirements/*"],
       "ignoreDeps": [
         "myst-parser",
         "sphinx-autobuild",
