--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -66,29 +66,15 @@ repos:
     hooks:
       - id: "end-of-file-fixer"
       - id: "trailing-whitespace"
-  - repo: "https://github.com/asottile/blacken-docs"
-    rev: "1.16.0"
-    hooks:
-      - id: "blacken-docs"
-        additional_dependencies: ["black==23.10.1"]
   - repo: "https://github.com/charliermarsh/ruff-pre-commit"
     rev: "v0.1.3"
     hooks:
       - id: "ruff"
+      - id: "ruff-format"
   - repo: "https://github.com/DavidAnson/markdownlint-cli2"
     rev: "v0.10.0"
     hooks:
       - id: "markdownlint-cli2-fix"
-  - repo: "https://github.com/nbQA-dev/nbQA"
-    rev: "1.7.0"
-    hooks:
-      - id: "nbqa-ruff"
-        additional_dependencies: ["ruff==0.1.3"]
-  - repo: "https://github.com/psf/black"
-    rev: "23.10.1"
-    hooks:
-      - id: "black"
-      - id: "black-jupyter"
   - repo: "https://github.com/srstevenson/nb-clean"
     rev: "3.1.0"
     hooks:
