--- a/template/.tools/requirements/requirements_dev.txt
+++ b/template/.tools/requirements/requirements_dev.txt
@@ -6,6 +6,8 @@
 # * -------------------------------------------------------------------------------- * #
 # * Changes below may be lost in significant template updates.
 
+# Install tests package so modules can be run in debugging
+tests/.
 # Introspection
 fawltydeps==0.13.1
 # Experiment
