--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -66,15 +66,6 @@ repos:
     hooks:
       - id: "end-of-file-fixer"
       - id: "trailing-whitespace"
-  - repo: "https://github.com/charliermarsh/ruff-pre-commit"
-    rev: "v0.1.3"
-    hooks:
-      - id: "ruff"
-      - id: "ruff-format"
-  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
-    rev: "v0.10.0"
-    hooks:
-      - id: "markdownlint-cli2-fix"
   - repo: "https://github.com/srstevenson/nb-clean"
     rev: "3.1.0"
     hooks:
@@ -91,3 +82,14 @@ repos:
             |docs/.*
             |tests/.*
           )$
+  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
+    rev: "v0.10.0"
+    hooks:
+      - id: "markdownlint-cli2-fix"
+  - repo: "https://github.com/charliermarsh/ruff-pre-commit"
+    rev: "v0.1.3"
+    hooks:
+      - id: "ruff"
+        types_or: ["python", "pyi", "jupyter"]
+      - id: "ruff-format"
+        types_or: ["python", "pyi", "jupyter"]
