--- a/template/.vscode/tasks.json
+++ b/template/.vscode/tasks.json
@@ -35,6 +35,7 @@
 
     // * -------------------------------------------------------------------------- * //
     // * PROJECT SETUP * //
+
     {
       "label": "setup: Copy template",
       "type": "shell",
@@ -81,6 +82,7 @@
 
     // * -------------------------------------------------------------------------- * //
     // * PRE-COMMIT * //
+
     {
       "label": "pre-commit",
       "type": "shell",
@@ -100,6 +102,7 @@
 
     // * -------------------------------------------------------------------------- * //
     // * GIT * //
+
     {
       "label": "git: Rebase back to fork",
       "type": "shell",
@@ -111,6 +114,7 @@
 
     // * -------------------------------------------------------------------------- * //
     // * BLACK * //
+
     {
       "label": "black: Ignore magic comma in this file",
       "type": "shell",
@@ -130,13 +134,12 @@
 
     // * -------------------------------------------------------------------------- * //
     // * OTHER TASKS * //
+
     {
-      "label": "task: format and clear notebook",
-      "dependsOrder": "sequence",
-      "dependsOn": ["task: format notebook"],
+      "label": "task: format notebook",
       "type": "shell",
       "options": { "shell": { "executable": "pwsh", "args": ["-Command"] } },
-      "command": "nbqa ruff --fix-only ${file}; nb-clean clean --remove-empty-cells --preserve-cell-metadata special tags -- ${file}; black ${file}",
+      "command": "nb-clean clean --remove-empty-cells --preserve-cell-outputs --preserve-cell-metadata special tags -- ${file}; ruff --fix-only ${file}; ruff format ${file}",
       "icon": { "id": "notebook" },
       "problemMatcher": []
     },
