--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,35 +64,12 @@ repos:
   # * Changes below may be lost in significant template updates.
 
   - repo: "https://github.com/pre-commit/pre-commit-hooks"
-    rev: "v4.4.0"
+    rev: "v4.5.0"
     hooks:
       - id: "end-of-file-fixer"
       - id: "trailing-whitespace"
-  - repo: "https://github.com/asottile/blacken-docs"
-    rev: "1.16.0"
-    hooks:
-      - id: "blacken-docs"
-        additional_dependencies: ["black==23.9.1"]
-  - repo: "https://github.com/charliermarsh/ruff-pre-commit"
-    rev: "v0.0.292"
-    hooks:
-      - id: "ruff"
-  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
-    rev: "v0.10.0"
-    hooks:
-      - id: "markdownlint-cli2-fix"
-  - repo: "https://github.com/nbQA-dev/nbQA"
-    rev: "1.7.0"
-    hooks:
-      - id: "nbqa-ruff"
-        additional_dependencies: ["ruff==0.0.292"]
-  - repo: "https://github.com/psf/black"
-    rev: "23.9.1"
-    hooks:
-      - id: "black"
-      - id: "black-jupyter"
   - repo: "https://github.com/srstevenson/nb-clean"
-    rev: "3.0.1"
+    rev: "3.1.0"
     hooks:
       - id: "nb-clean"
         args:
@@ -107,3 +84,14 @@ repos:
             |docs/.*
             |tests/.*
           )$
+  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
+    rev: "v0.10.0"
+    hooks:
+      - id: "markdownlint-cli2-fix"
+  - repo: "https://github.com/charliermarsh/ruff-pre-commit"
+    rev: "v0.1.3"
+    hooks:
+      - id: "ruff"
+        types_or: ["python", "pyi", "jupyter"]
+      - id: "ruff-format"
+        types_or: ["python", "pyi", "jupyter"]
