--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ reportUnnecessaryTypeIgnoreComment = "none"
 reportUnusedCallResult = "none"
 
 [tool.ruff]
+include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
 fix = true
 cache-dir = ".cache/.ruff_cache"
 select = ["ALL"]
@@ -151,16 +152,15 @@ unfixable = [
     "F601", # Don't fix duplicate mapping keys
 ]
 
-[tool.ruff.pydocstyle]
-convention = "google"
+[tool.ruff.format]
+preview = true
+skip-magic-trailing-comma = true
 
 [tool.ruff.isort]
-# * ---------------------------------------------------------------------------- * #
-# * Changes below should persist in significant template updates.
-
-# * ---------------------------------------------------------------------------- * #
-# * Changes below may be lost in significant template updates.
 split-on-trailing-comma = false
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 [tool.ruff.per-file-ignores]
 "docs/**" = [
