Fix ruff excludes. Update VSCode file excludes, too

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
   "python.languageServer": "Pylance",
   "python.analysis.indexing": true,
   "python.analysis.persistAllIndices": true,
+  "python.analysis.typeCheckingMode": "strict",
   //? See "include" and "extrapaths" in pyrightconfig.json
   "python.analysis.autoSearchPaths": false,
   //? Helpers
@@ -83,13 +84,24 @@
   "python.testing.pytestEnabled": true,
   //* ruff
   "ruff.importStrategy": "fromEnvironment",
-  "ruff.format.args": [],
-  "ruff.lint.args": [],
+  // "ruff.format.args": [],
+  // "ruff.lint.args": [],
 
   //! GitHub Actions
   "github-actions.workflows.pinned.workflows": [".github/workflows/main.yml"],
 
   //! Files
+  //* Excludes
+  "files.exclude": {
+    "**/__pycache__": true,
+    "**/.cache": true,
+    "**/.pytest_cache/": true,
+    //? Pylance temp files get picked up in Problems pane before deletion
+    "**/*pylance-notebook-cell*": true
+  },
+  "search.exclude": {
+    "submodules": true
+  },
   //* Experimental file nesting
   "explorer.sortOrder": "foldersNestsFiles",
   "explorer.fileNesting.enabled": true,
@@ -107,11 +119,6 @@
     ".root": "plaintext",
     ".sourcery.yaml": "yaml"
   },
-  //* Exclude problematic files in Problems panel filter and elsewhere
-  "files.exclude": {
-    //? Pylance temp files get picked up in Problems pane before deletion
-    "**/*pylance-notebook-cell*": true
-  },
   //* File icon associations
   "workbench.iconTheme": "vscode-icons",
   "vsicons.presets.hideExplorerArrows": true,
@@ -120,10 +127,6 @@
   //! Built-in
   //* Markdown editor moves jarringly when this is "true"
   "markdown.preview.scrollEditorWithPreview": false,
-  //* Exclude
-  "search.exclude": {
-    "submodules": true
-  },
 
   //! Line-width
   //* Formatting
