Apparently need to specify strict here and in `pyproject.toml`

--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -5,6 +5,7 @@
 
   //! Pylance
   "python.languageServer": "Pylance",
+  "python.analysis.typeCheckingMode": "strict",
   "python.analysis.indexing": true,
   "python.analysis.persistAllIndices": true,
   //? See "include" and "extrapaths" in pyrightconfig.json
