Propagate some file associations

--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -91,10 +91,11 @@
     ".coveragerc": "ini",
     ".env": "dotenv",
     ".pylintrc": "ini",
-    "pyrightconfig.json": "jsonc",
-    "*requirements*.txt": "pip-requirements",
     ".root": "plaintext",
-    ".sourcery.yaml": "yaml"
+    ".sourcery.yaml": "yaml",
+    "*requirements*.txt": "pip-requirements",
+    "*ipython-input*": "python",
+    "pyrightconfig.json": "jsonc"
   },
   //* File icon associations
   "workbench.iconTheme": "vscode-icons",
