Update from self. Don't type check notebooks with nbqa

--- a/renovate.json
+++ b/renovate.json
@@ -58,7 +58,6 @@
         "psf/black",
         "charliermarsh/ruff-pre-commit",
         "srstevenson/nb-clean",
-        "nbQA-dev/nbQA",
         "asottile/blacken-docs",
         "DavidAnson/markdownlint-cli2"
       ]
@@ -72,8 +71,7 @@
         "pytest",
         "pytest-cov",
         "pytest-custom-exit-code",
-        "nb-clean",
-        "nbqa"
+        "nb-clean"
       ]
     },
     {
