--- a/template/.tools/requirements/requirements_both.txt
+++ b/template/.tools/requirements/requirements_both.txt
@@ -9,8 +9,7 @@ pytest==7.4.3
 # Testing plugins
 pytest-cov==4.1.0
 pytest-custom-exit-code==0.3.0
-# Format AND test notebooks
+# Format notebooks
 nb-clean==3.1.0
-nbqa==1.7.1
 
 -r requirements_docs.txt
