--- a/renovate.json
+++ b/renovate.json
@@ -33,9 +33,9 @@
       "matchUpdateTypes": ["minor", "patch"]
     },
     {
-      "description": "Avoid cyclic dependency on self.",
-      "matchManagers": ["git-submodules"],
-      "ignoreDeps": ["submodules/template"]
+      "description": "Issue with prompt-toolkit. See <https://github.com/ipython/ipython/issues/14255>.",
+      "matchManagers": ["pip_requirements"],
+      "ignoreDeps": ["ipython"]
     },
     {
       "description": "Pre-commit manages black and ruff, projects manage pyright",
