--- a/template/.tools/requirements/requirements_dev.txt
+++ b/template/.tools/requirements/requirements_dev.txt
@@ -6,6 +6,8 @@
 fawltydeps==0.13.3
 # Experiment
 ipykernel==6.27.1
+# ? https://github.com/ipython/ipython/issues/14255
+ipython==8.17.2
 # Debug
 debugpy==1.8.0
 # For `pythonstartup.py`
