--- a/template/.gitignore
+++ b/template/.gitignore
@@ -3,12 +3,12 @@
 
 # To allow for local variation in type checking without overriding CI
 pyrightconfig.json
+# To allow for local variation in test configuration without overriding CI
+pytest.ini
 # To avoid committing profiler results
 *.prof
 # To avoid committing rejected changes upon bumping template
 *.rej
-# Don't commit first time setup script from copier-python-init
-/.tools/scripts/first_time_setup.ps1
 # Don't commit code workspace files, which might be symlinked here
 *.code-workspace
 # Avoid committing local docs builds for previewing
