--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v4.1.1"
       - uses: "actions/setup-python@v5.0.0"
+      - run: "python .tools/scripts/bump_requirements.py"
       - name: "Test installation of template dev tools."
         run: |-
           python -m pip install --requirement 'template/.tools/requirements/requirements_core.txt'
@@ -20,6 +21,7 @@ jobs:
       - uses: "actions/setup-python@v5.0.0"
         with:
           python-version: "3.11"
+      - run: "python .tools/scripts/bump_requirements.py"
       - uses: "stefanzweifel/git-auto-commit-action@v5.0.0"
         with:
           commit_message: "Bump pre-commit configuration and related dependencies"
