--- a/template/.tools/requirements/requirements_ci.txt
+++ b/template/.tools/requirements/requirements_ci.txt
@@ -1,5 +1,4 @@
-# Requirements for dev environments.
-
+# Requirements for dev environments
 # Publishing
 flit==3.9.0
 # Annotate test failures in PRs
