--- a/template/.tools/requirements/requirements_docs.txt
+++ b/template/.tools/requirements/requirements_docs.txt
@@ -1,5 +1,4 @@
-# Requirements for documentation.
-
+# Requirements for documentation
 myst-parser==2.0.0
 sphinx-autobuild==2021.03.14
 sphinx-book-theme==1.1.0
