--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -53,12 +53,17 @@ repos:
     hooks:
       - id: "end-of-file-fixer"
       - id: "trailing-whitespace"
+  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
+    rev: "v0.11.0"
+    hooks:
+      - id: "markdownlint-cli2-fix"
   - repo: "https://github.com/srstevenson/nb-clean"
     rev: "3.2.0"
     hooks:
       - id: "nb-clean"
         args:
           - "--remove-empty-cells"
+          - "--preserve-notebook-metadata"
           - "--preserve-cell-metadata"
           - "tags"
           - "--"
@@ -68,10 +73,6 @@ repos:
             |docs/.*
             |tests/.*
           )$
-  - repo: "https://github.com/DavidAnson/markdownlint-cli2"
-    rev: "v0.11.0"
-    hooks:
-      - id: "markdownlint-cli2-fix"
   - repo: "https://github.com/charliermarsh/ruff-pre-commit"
     rev: "v0.1.11"
     hooks:
